methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:14: error: ')' expected but ':' found.
  def cote(c3:Color,c4:Colorc3:Color,c4:Color){
                              ^